--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -51,9 +51,12 @@ jobs:
       matrix:
         # list whatever Terraform versions here you would like to support
         terraform:
-          - '0.12.29'
-          - '0.13.4'
-          - '0.14.0-beta2'
+          - '1.0.0'
+          - '1.0.1'
+          - '1.0.2'
+          - '1.0.3'
+          - '1.0.4'
+          - '1.0.5'
     steps:
 
     - name: Set up Go
@@ -81,4 +84,4 @@ jobs:
         # SOME_VAR: ${{ secrets.SOME_VAR }}
 
       run: |
-        go test -v -cover ./internal/provider/
+        make testacc
